Fix responsive issues with overlapping and collapsing divs across browsers

--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -19,16 +19,14 @@ html {
 
 body {
   background: #1c1c1c;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin-right: auto;
-  margin: auto;
-  min-height: 100%;
   flex-direction: column;
   justify-content: space-between;
   background-image: url("../../public/assets/img/bg.png");
   max-width: 1200px; }
+  body::after {
+    clear: both;
+    content: "";
+    display: block; }
 
 hr {
   width: 100%;
@@ -174,7 +172,7 @@ hr {
   justify-content: space-around; }
   @media only screen and (max-width: 690px) {
     .link-tiles {
-      flex-direction: column; } }
+      display: block; } }
   .link-tiles .tile {
     display: flex;
     justify-content: center;
@@ -191,7 +189,7 @@ hr {
         height: 350px; } }
     @media only screen and (max-width: 690px) {
       .link-tiles .tile {
-        height: 300px;
+        height: 250px;
         width: 100%; } }
     .link-tiles .tile h2 {
       font-size: 2.6rem; }
