--- a/styles/scss/layout/_containers.scss
+++ b/styles/scss/layout/_containers.scss
@@ -55,7 +55,7 @@
   height: 100%;
   justify-content: space-around;
   @media only screen and (#{$break-mobile}) {
-    flex-direction: column;
+    display: block;
 
   }
   .tile {
@@ -74,7 +74,7 @@
       height: 350px;
     }
     @media only screen and (#{$break-mobile}) {
-      height: 300px;
+      height: 250px;
       width: 100%;
     }
     h2 {
